--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  
+  <h1>ciao</h1>
+
+  <div>
+    <p>eccolo!</p>
+  </div>
 </body>
 <script src="./script.js"></script>
 </html>
